#147 Added implementation for method that adds item to json array