@@ -675,7 +675,7 @@ public abstract class AbstractItemDaoTest {
         Hibernate6JsonUpdateStatementBuilder<Object, JsonArrayOperations> hibernate6JsonUpdateStatementBuilder = new Hibernate6JsonUpdateStatementBuilder(root.get("jsonbContent"), (NodeBuilder) entityManager.getCriteriaBuilder(), hibernateContext);
         hibernate6JsonUpdateStatementBuilder.appendJsonbSet(new JsonTextArrayBuilder().append("child").append("pets").build(), null, new JsonArrayOperations(Arrays.asList("crab", "ant"), Arrays.asList("lion", "dolphin")));
         hibernate6JsonUpdateStatementBuilder.appendJsonbSet(new JsonTextArrayBuilder().append("name").build(), JSONObject.quote("Simon"));
-        hibernate6JsonUpdateStatementBuilder.appendJsonbSet(new JsonTextArrayBuilder().append("inventory").build(), null, new JsonArrayOperations(Arrays.asList("compass", "mask"), Arrays.asList("knife")));
+        hibernate6JsonUpdateStatementBuilder.appendJsonbSet(new JsonTextArrayBuilder().append("inventory").build(), null, new JsonArrayOperations(Arrays.asList("compass", "mask"), List.of("knife")));
         hibernate6JsonUpdateStatementBuilder.withJsonbSetFunctionFactory(new Hibernate6JsonUpdateStatementBuilder.DefaultJsonbSetFunctionFactory<Object, JsonArrayOperations>() {
 
             public JsonbSetFunction build(NodeBuilder nodeBuilder, Path<Object> rootPath, JsonUpdateStatementConfiguration.JsonUpdateStatementOperation<JsonArrayOperations> operation, HibernateContext hibernateContext) {
@@ -723,6 +723,42 @@ public abstract class AbstractItemDaoTest {
             executionPhase = BEFORE_TEST_METHOD)
     @Test
     @Transactional
+    @DisplayName("should modify json array elements by removing and adding specific values with the udpate statement by using Hibernate6JsonUpdateStatementBuilder - documentation demo")
+    public void shouldUpdateJsonObjectWithBuilderForDemo() {
+        // GIVEN
+        Item item = tested.findById(24L);
+        DocumentContext document = JsonPath.parse((Object) JsonPath.read(item.getJsonbContent(), "$"));
+        assertThat(document.jsonString()).isEqualTo("{\"child\":{\"pets\":[\"crab\",\"chameleon\"]},\"inventory\":[\"mask\",\"fins\",\"compass\"]}");
+        CriteriaUpdate<Item> criteriaUpdate = entityManager.getCriteriaBuilder().createCriteriaUpdate(Item.class);
+        Root<Item> root = criteriaUpdate.from(Item.class);
+
+        Hibernate6JsonUpdateStatementBuilder hibernate6JsonUpdateStatementBuilder = new Hibernate6JsonUpdateStatementBuilder(root.get("jsonbContent"), (NodeBuilder) entityManager.getCriteriaBuilder(), hibernateContext)
+                .appendAddArrayItems(new JsonTextArrayBuilder().append("child").append("pets").build(), new JSONArray(Arrays.asList("lion", "dolphin")).toString())
+                .appendRemoveArrayItems(new JsonTextArrayBuilder().append("child").append("pets").build(), new JSONArray(Arrays.asList("crab", "ant")).toString())
+                .appendJsonbSet(new JsonTextArrayBuilder().append("name").build(), JSONObject.quote("Simon"))
+                .appendRemoveArrayItems(new JsonTextArrayBuilder().append("inventory").build(), new JSONArray(Arrays.asList("compass", "mask")).toString())
+                .appendAddArrayItems(new JsonTextArrayBuilder().append("inventory").build(), new JSONArray(List.of("knife")).toString());
+
+        // Set the property you want to update and the new value
+        criteriaUpdate.set("jsonbContent", hibernate6JsonUpdateStatementBuilder.build());
+
+        // Add any conditions to restrict which entities will be updated
+        criteriaUpdate.where(entityManager.getCriteriaBuilder().equal(root.get("id"), 24L));
+
+        // WHEN
+        entityManager.createQuery(criteriaUpdate).executeUpdate();
+
+        // THEN
+        entityManager.refresh(item);
+        document = JsonPath.parse((Object) JsonPath.read(item.getJsonbContent(), "$"));
+        assertThat(document.jsonString()).isEqualTo("{\"name\":\"Simon\",\"child\":{\"pets\":[\"chameleon\",\"lion\",\"dolphin\"]},\"inventory\":[\"fins\",\"knife\"]}");
+    }
+
+    @Sql(value = {CLEAR_DATABASE_SCRIPT_PATH, ITEMS_SCRIPT_PATH},
+            config = @SqlConfig(transactionMode = ISOLATED),
+            executionPhase = BEFORE_TEST_METHOD)
+    @Test
+    @Transactional
     @DisplayName("should remove json array elements with the update statement by using RemoveJsonValuesFromJsonArrayFunction - documentation demo")
     public void shouldRemoveJsonArrayElementseWithUpdateStatementForDemo() {
         // GIVEN
@@ -734,7 +770,7 @@ public abstract class AbstractItemDaoTest {
 
         NodeBuilder nodeBuilder = (NodeBuilder) entityManager.getCriteriaBuilder();
         JSONArray toRemoveJSONArray = new JSONArray(Arrays.asList("mask", "compass"));
-        RemoveJsonValuesFromJsonArrayFunction deleteOperator = new RemoveJsonValuesFromJsonArrayFunction(nodeBuilder, new JsonBExtractPath(root.get("jsonbContent"), nodeBuilder, Arrays.asList("inventory")), toRemoveJSONArray.toString(), hibernateContext);
+        RemoveJsonValuesFromJsonArrayFunction deleteOperator = new RemoveJsonValuesFromJsonArrayFunction(nodeBuilder, new JsonBExtractPath(root.get("jsonbContent"), nodeBuilder, List.of("inventory")), toRemoveJSONArray.toString(), hibernateContext);
         JsonbSetFunction jsonbSetFunction = new JsonbSetFunction(nodeBuilder, (SqmTypedNode) root.get("jsonbContent"), new JsonTextArrayBuilder().append("inventory").build().toString(), deleteOperator, hibernateContext);
         // Set the property you want to update and the new value
         criteriaUpdate.set("jsonbContent", jsonbSetFunction);
@@ -766,7 +802,7 @@ public abstract class AbstractItemDaoTest {
         Root<Item> root = criteriaUpdate.from(Item.class);
 
         JSONArray toRemoveJSONArray = new JSONArray(Arrays.asList("mask", "compass"));
-        Hibernate6JsonUpdateStatementBuilder<Object, JsonArrayOperations> hibernate6JsonUpdateStatementBuilder = new Hibernate6JsonUpdateStatementBuilder(root.get("jsonbContent"), (NodeBuilder) entityManager.getCriteriaBuilder(), hibernateContext);
+        Hibernate6JsonUpdateStatementBuilder hibernate6JsonUpdateStatementBuilder = new Hibernate6JsonUpdateStatementBuilder(root.get("jsonbContent"), (NodeBuilder) entityManager.getCriteriaBuilder(), hibernateContext);
         hibernate6JsonUpdateStatementBuilder.appendRemoveArrayItems(new JsonTextArrayBuilder().append("inventory").build(), toRemoveJSONArray.toString());
 
         // Set the property you want to update and the new value
